# core-api

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
core/: app.py  auth.py  cli.py  config.py  errors.py  guards.py  migrate.py  models.py  response.py  uow.py
core/alerts/: README.md  background.py  controller.py  models.py  repo.py  service.py
core/analysis/: embedding.py  genai.py  keywords.py  language_id.py
core/auth/: README.md  api_token_auth.py  controller.py  dependencies.py  guards.py  jwt.py  middleware.py  models.py  repo.py  service.py
core/email/: __init__.py  mailgun.py  messages.py  print.py  smtp.py
core/entities/: controller.py  graph_models.py  models.py  repo.py  service.py
core/feedback/: __init__.py  controller.py  models.py  repo.py  service.py
core/graph_events/: dispatcher.py  models.py  service.py
core/integrations/: router.py
core/languages/: controller.py  models.py
core/media/: models.py
core/media_feeds/: controller.py  models.py  repo.py  service.py
core/migrations/: 1.add-videos-table.up.sql  10.add-users-and-orgs.up.sql  11.add-alerts-tables.up.sql  11.add-media-feeds-tables.up.sql  12.add-entities-table.up.sql  12.add-media-feed-cursors-table.up.sql  14.add-feedback-tables.up.sql  14.add-indexes-for-speed.up.sql  15.add-feedback-tables.up.sql  15.add-video-stats-table.up.sql  16.add-feedback-tables.up.sql  16.make-channel-unique-constraint-case-insensitive.up.sql  18.add-alert-notifications-on-slack-channels.up.sql  18.add-evolution-description-to-narratives.up.sql  18.keyword-feeds-topic-to-uuid.up.sql  19.add-narrative-context-to-narratives.up.sql  19.rename-evolution-description-to-narrative-context.up.sql  2.add-transcripts-table.up.sql  20.add-narrative-virality-tables.up.sql  20.remove-video-virality-scores-table.down.sql  21.add-graph-events-outbox.up.sql  3.add-claims-table.up.sql  4.enable-vector-search.up.sql  5.add-narratives-table.up.sql  5.add-users-and-orgs.up.sql  6.add-topics-table.up.sql  7.add-claim-narratives-table.up.sql  8.insert-default-topics.up.sql  9.add-claim-topics-table.up.sql
core/narratives/: api.py  controller.py  models.py  repo.py  service.py
core/services/: narratives_api.py
core/topics/: controller.py  models.py  repo.py  service.py
core/videos/: controller.py  models.py  pastel.py  repo.py  service.py
deployment/: deploy.sh  deployment.yaml  ingress.yaml  service-account.yaml
deployment/base/: backend-config.yaml  cron-process-alerts.yaml  deployment.yaml  frontend-config.yaml  frontend-service.yaml  ingress.yaml  kustomization.yaml  service-account.yaml
deployment/dev/: cron-process-alerts.yaml  deployment.yaml  ingress.yaml  login.sh
deployment/prod/: cron-process-alerts.yaml  deployment.yaml  ingress.yaml  login.sh  service-account.yaml
docs/: feat-evolution-description.md
scripts/: 2026-05-19-cleanup-narrative-context.sql
tests/: conftest.py
tests/alerts/: test_multichannel.py
tests/auth/: conftest.py  controller_test.py  service_test.py
tests/email/: mailgun_test.py
tests/entities/: conftest.py  test_entities_controller.py
tests/feedback/: conftest.py  controller_test.py
tests/integrations/: __init__.py
tests/media_feeds/: conftest.py  controller_test.py  test_case_insensitive_duplicates.py
tests/narratives/: conftest.py  test_api_client.py  test_narrative_stats_carry_forward.py  test_narratives_controller.py  test_virality_service.py
tests/videos/: conftest.py  controller_test.py
(+38 files in other folders)
