[project]
name = "core-api"
version = "0.1.0"
description = "The core API service for the PAS project."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "litestar[opentelemetry,pydantic,standard,structlog]>=2.16.0",
    "psycopg[binary,pool]>=3.2.9",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
    "taskipy>=1.14.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
filterwarnings = []

[tool.taskipy.tasks]
test = { cmd = "pytest", help = "runs all unit tests" }
lint = { cmd = "ruff app", help = "confirms code style using pylint" }
